@@ -1,6 +1,8 @@
 package com.group6.Rental_Car.services.admindashboard;
 
 import com.group6.Rental_Car.dtos.admindashboard.AdminDashboardResponse;
+import com.group6.Rental_Car.entities.Incident;
+import com.group6.Rental_Car.enums.IncidentStatus;
 import com.group6.Rental_Car.enums.Role;
 import com.group6.Rental_Car.repositories.*;
 import lombok.RequiredArgsConstructor;
@@ -16,69 +18,120 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class AdminDashboardServiceImpl implements AdminDashboardService {
+
     private final VehicleRepository vehicleRepository;
     private final UserRepository userRepository;
     private final RentalOrderRepository rentalOrderRepository;
     private final FeedbackRepository feedbackRepository;
-    private final MaintenanceRepository maintenanceRepository;
+    private final IncidentRepository incidentRepository; // ← rename
 
     @Override
     public AdminDashboardResponse getOverview(LocalDate from, LocalDate to) {
-        // Mặc định 30 ngày gần nhất nếu thiếu 1 trong 2 tham số
+        // Mặc định 30 ngày gần nhất
         if (from == null || to == null) {
             to   = LocalDate.now();
             from = to.minusDays(29);
         }
-        // Đảm bảo from <= to
-        if (from.isAfter(to)) {
-            LocalDate tmp = from; from = to; to = tmp;
-        }
+        if (from.isAfter(to)) { LocalDate tmp = from; from = to; to = tmp; }
 
         Timestamp tsFrom = Timestamp.valueOf(from.atStartOfDay());
         Timestamp tsTo   = Timestamp.valueOf(LocalDateTime.of(to, LocalTime.MAX));
+        LocalDateTime ldtFrom = tsFrom.toLocalDateTime();
+        LocalDateTime ldtTo   = tsTo.toLocalDateTime();
 
-        // KPI Vehicle
+        // ===== KPI Vehicle =====
         long totalVehicles       = vehicleRepository.count();
         long availableVehicles   = vehicleRepository.countByStatus("available");
         long rentedVehicles      = vehicleRepository.countByStatus("rented");
         long maintenanceVehicles = vehicleRepository.countByStatus("maintenance");
 
-        // KPI Orders + Revenue
-        long totalOrders      = rentalOrderRepository.count();
-        long activeOrders     = rentalOrderRepository.countByStatus("active");
-        double revenueInRange = Optional.ofNullable(
-                rentalOrderRepository.revenueBetween(tsFrom, tsTo)
-        ).orElse(0d);
+        // ===== KPI Orders + Revenue =====
+        long totalOrders   = rentalOrderRepository.count();
+        long activeOrders  = rentalOrderRepository.countByStatus("active");
+        double revenueInRange = Optional
+                .ofNullable(rentalOrderRepository.revenueBetween(tsFrom, tsTo))
+                .orElse(0d);
 
-        // KPI Users (YÊU CẦU: User.role @Enumerated(EnumType.STRING))
+        // ===== KPI Users =====
         long totalUsers = userRepository.count();
         long admins     = userRepository.countByRole(Role.admin);
         long staffs     = userRepository.countByRole(Role.staff);
         long customers  = userRepository.countByRole(Role.customer);
 
-        double maintenanceCostInRange = Optional.ofNullable(
-                maintenanceRepository.totalCostBetween(from, to)
-        ).orElse(0d);
+        // ===== Incident (thay cho maintenance) =====
+        // Tổng chi phí sự cố trong khoảng
+        double incidentCostInRange = Optional
+                .ofNullable(incidentRepository.totalCostBetweenTs(tsFrom, tsTo))
+                .orElse(0d);
 
-        // vehiclesByStatus (chart)
+        // Lấy toàn bộ incident trong khoảng để nhóm theo status/severity
+        // (cần method này trong IncidentRepository – xem ghi chú bên dưới)
+        List<Incident> incidentsInRange =
+                incidentRepository.findAllInRange(ldtFrom, ldtTo);
+
+        long totalIncidentsInRange = incidentsInRange.size();
+        long openIncidents         = incidentsInRange.stream()
+                .filter(i -> i.getStatus() == IncidentStatus.OPEN).count();
+        long inProgressIncidents   = incidentsInRange.stream()
+                .filter(i -> i.getStatus() == IncidentStatus.IN_PROGRESS).count();
+        long resolvedIncidents     = incidentsInRange.stream()
+                .filter(i -> i.getStatus() == IncidentStatus.RESOLVED).count();
+
+        Map<String, Long> incidentsByStatus = incidentsInRange.stream()
+                .collect(Collectors.groupingBy(i -> i.getStatus().name(), Collectors.counting()));
+
+        // Nếu có enum IncidentSeverity thì thay i.getSeverity().name()
+        Map<String, Long> incidentsBySeverity = incidentsInRange.stream()
+                .collect(Collectors.groupingBy(i -> i.getSeverity().name(), Collectors.counting()));
+
+        // Incidents theo ngày (điền đủ các ngày trống)
+        var incDayRows = incidentRepository.incidentsByDay(tsFrom, tsTo);
+        Map<LocalDate, Long> incDayMap = incDayRows.stream().collect(Collectors.toMap(
+                r -> ((java.sql.Date) r[0]).toLocalDate(),
+                r -> ((Number) r[1]).longValue()
+        ));
+        List<AdminDashboardResponse.DayCount> incidentsByDay = new ArrayList<>();
+        for (LocalDate d = from; !d.isAfter(to); d = d.plusDays(1)) {
+            incidentsByDay.add(AdminDashboardResponse.DayCount.builder()
+                    .date(d)
+                    .count(incDayMap.getOrDefault(d, 0L))
+                    .build());
+        }
+
+        // Recent incidents (giới hạn 10, bạn có thể đổi)
+        var recentRows = incidentRepository.recentIncidents(tsFrom, tsTo, 10);
+        var recentIncidents = recentRows.stream().map(r ->
+                AdminDashboardResponse.RecentIncident.builder()
+                        .incidentId(((Number) r[0]).intValue())
+                        .vehicleId(((Number) r[1]).longValue())
+                        .vehicleName((String) r[2])
+                        .description((String) r[4])
+                        .severity(String.valueOf(r[5]))
+                        .status(String.valueOf(r[6]))
+                        .occurredOn(((java.sql.Date) r[7]).toLocalDate())
+                        .cost(r[8] == null ? 0d : ((Number) r[8]).doubleValue())
+                        .build()
+        ).toList();
+
+        // ===== Vehicles by status =====
         var vehiclesByStatus = List.of(
                 AdminDashboardResponse.LabelCount.builder().label("available").count(availableVehicles).build(),
                 AdminDashboardResponse.LabelCount.builder().label("rented").count(rentedVehicles).build(),
                 AdminDashboardResponse.LabelCount.builder().label("maintenance").count(maintenanceVehicles).build()
         );
 
-        // vehiclesByStation (native: List<Object[]>: [stationId, stationName, total])
+        // ===== Vehicles by station =====
         var vehiclesByStation = vehicleRepository.vehiclesPerStation().stream()
                 .map(r -> AdminDashboardResponse.StationCount.builder()
                         .stationId(((Number) r[0]).intValue())
                         .stationName((String) r[1])
                         .total(((Number) r[2]).longValue())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
-        // revenueByDay (điền đủ ngày rỗng)
-        var revenueRows = rentalOrderRepository.revenueByDay(tsFrom, tsTo);
-        Map<LocalDate, Double> revMap = revenueRows.stream().collect(Collectors.toMap(
+        // ===== Revenue by day=====
+        var revRows = rentalOrderRepository.revenueByDay(tsFrom, tsTo);
+        Map<LocalDate, Double> revMap = revRows.stream().collect(Collectors.toMap(
                 r -> ((java.sql.Date) r[0]).toLocalDate(),
                 r -> ((Number) r[1]).doubleValue()
         ));
@@ -90,7 +143,7 @@ public class AdminDashboardServiceImpl implements AdminDashboardService {
                     .build());
         }
 
-        // rating
+        // ===== Rating =====
         Double avgRating = Optional.ofNullable(feedbackRepository.avgRating()).orElse(0d);
         Map<Integer, Long> ratingDistribution = feedbackRepository.ratingDistribution().stream()
                 .collect(Collectors.toMap(
@@ -100,6 +153,7 @@ public class AdminDashboardServiceImpl implements AdminDashboardService {
                         TreeMap::new
                 ));
 
+        // ===== Build KPI =====
         var kpi = AdminDashboardResponse.Kpi.builder()
                 .totalVehicles(totalVehicles)
                 .availableVehicles(availableVehicles)
@@ -112,7 +166,17 @@ public class AdminDashboardServiceImpl implements AdminDashboardService {
                 .admins(admins)
                 .staffs(staffs)
                 .customers(customers)
-                .maintenanceCostInRange(maintenanceCostInRange)
+                //tổng chi phí incident
+                .maintenanceCostInRange(incidentCostInRange)
+                .build();
+
+        // ===== Build IncidentKpi =====
+        var incidentKpi = AdminDashboardResponse.IncidentKpi.builder()
+                .totalIncidentsInRange(totalIncidentsInRange)
+                .openIncidents(openIncidents)
+                .inProgressIncidents(inProgressIncidents)
+                .resolvedIncidents(resolvedIncidents)
+                .incidentCostInRange(incidentCostInRange)
                 .build();
 
         return AdminDashboardResponse.builder()
@@ -122,6 +186,12 @@ public class AdminDashboardServiceImpl implements AdminDashboardService {
                 .revenueByDay(revenueByDay)
                 .avgRating(avgRating)
                 .ratingDistribution(ratingDistribution)
+                // New: Incident section
+                .incidentKpi(incidentKpi)
+                .incidentsByDay(incidentsByDay)
+                .incidentsByStatus(incidentsByStatus)
+                .incidentsBySeverity(incidentsBySeverity)
+                .recentIncidents(recentIncidents)
                 .build();
     }
 }
